[package]
name = "ansi_brush"
version = "0.0.22"
edition = "2021"
description = "ANSI Styling"
license = "MIT"
keywords = ["ansi", "color", "colour", "terminal", "styling"]
documentation = "https://docs.rs/ansi_brush/"
homepage = "https://github.com/BumpyBill/jewel/tree/main/ansi_brush"
repository = 'https://github.com/BumpyBill/jewel/tree/main/ansi_brush'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]